--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "create-cassia-engine",
-  "description": "description",
-  "version": "0.0.0",
-  "author": "yxdtg <2430877819@qq.com>",
-  "scripts": {
-    "build": "tsup src/cli.ts --minify",
-    "clean": "shx rm -rf lib",
-    "dev": "tsup src/cli.ts --watch",
-    "prepublishOnly": "npm run clean && npm run build"
-  },
-  "bin": "dist/cli.js",
-  "files": [
-    "dist",
-    "templates"
-  ],
-  "devDependencies": {
-    "@types/node": "^17.0.29",
-    "tsup": "^5.12.1",
-    "typescript": "^4.6.3"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "create-create-app": "^7.3.0"
-  }
+    "name": "create-cassia-engine",
+    "description": "create cassia engine project",
+    "version": "0.0.1",
+    "author": "yxdtg <2430877819@qq.com>",
+    "scripts": {
+        "build": "tsup src/cli.ts --minify",
+        "clean": "shx rm -rf lib",
+        "dev": "tsup src/cli.ts --watch",
+        "prepublishOnly": "npm run clean && npm run build"
+    },
+    "bin": "dist/cli.js",
+    "files": [
+        "dist",
+        "templates"
+    ],
+    "keywords": [
+        "cassia-engine",
+        "create-cassia-engine"
+    ],
+    "devDependencies": {
+        "@types/node": "^17.0.29",
+        "tsup": "^5.12.1",
+        "typescript": "^4.6.3"
+    },
+    "license": "MIT",
+    "dependencies": {
+        "create-create-app": "^7.3.0"
+    }
 }
