--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ typings/
 .nuxt
 
 # react / gatsby 
-public/
+./public/
 
 # vuepress build output
 .vuepress/dist
@@ -99,3 +99,5 @@ public/
 .dynamodb/
 
 # End of https://www.gitignore.io/api/node
+
+.vscode/*
