--- a/templates/default/tsconfig.json
+++ b/templates/default/tsconfig.json
@@ -8,6 +8,7 @@
         "moduleResolution": "node10",
         "allowJs": true,
 
+        "verbatimModuleSyntax": true,
         "stripInternal": true,
 
         "esModuleInterop": true,
