--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "{{name}}",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "cassia-engine": "^0.0.17"
-    },
-    "devDependencies": {
-        "typescript": "~5.8.3",
-        "vite": "^7.1.2",
-        "@types/node": "^24.2.1"
-    }
+  "name": "{{name}}",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "typescript": "~5.8.3",
+    "vite": "npm:rolldown-vite@latest"
+  },
+  "dependencies": {
+    "cassia-engine": "^0.0.19"
+  }
 }
